vote-app-results/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: 192.168.56.10:8082/voteapp/results-app:latest
        ports:
        - containerPort: 80
          name: result
      imagePullSecrets:
      - name: nexus
