vote-app-results/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  ports:
  - port: 5001
    targetPort: 80
    name: result-service
  selector:
    app: result
